update attendance service